--- a/cart.html
+++ b/cart.html
@@ -203,9 +203,9 @@
     </section>
 
 
-    <footer>
+    <footer >
 
-        <div class="footermain">
+        <div class="footermain cfoot">
 
             <div class="footer">
 
