--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 </div>
                 <div class="num">
                     <div class="num">
-                        <h3>Our Experience</h3>
+                        <h3>Cake Specialist</h3>
                         12345
                     </div>
                 </div>
@@ -273,7 +273,7 @@
                 </div>
                 <div class="num">
                     <div class="num">
-                        <h3>Our Experience</h3>
+                        <h3>Complete Project</h3>
                         12345
                     </div>
                 </div>
@@ -284,7 +284,7 @@
                 </div>
                 <div class="num">
                     <div class="num">
-                        <h3>Our Experience</h3>
+                        <h3>Happy Clients</h3>
                         12345
                     </div>
                 </div>
