--- a/contact.html
+++ b/contact.html
@@ -26,11 +26,11 @@
         <input type="checkbox" id="bar" class="checkbox">
         <nav>
             <ul>
-                <li><a href="index.html" class="a1">HOME</a></li>
-                <li><a href="about.html" class="a2">ABOUT</a></li>
-                <li><a href="shop.html" class="a3">ORDER ONLINE</a></li>
-                <li><a href="category.html" class="a4">CATEGORY</a></li>
-                <li><a href="contact.html" class="a5">CONTACT</a></li>
+                <li><a href="index.html" class="a1">Home</a></li>
+                <li><a href="about.html" class="a2">About</a></li>
+                <li><a href="shop.html" class="a3">Shop</a></li>
+                <li><a href="blog.html" class="a4">Blog</a></li>
+                <li><a href="contact.html" class="a5">Contact</a></li>
             </ul>
         </nav>
         <div class="cart">
@@ -128,69 +128,38 @@
     </section>
 
 
-    <section class="section6 sectionfor_contact">
-
-        <div class="container6">
-            <!-- <div class="heading">
-                <h4></h4>
-
-                <div class="line"></div>
-            </div> -->
-
-            <div class="contactus">
-
-                <div class="pic">
-
-                    <div class="box1">
-                        <h1 class="welcome">Contact With us</h1>
-                        <h6>Representatives or Advisors are available:</h6>
-                        <h6>Mon-Fri: 5:00am to 9:00pm</h6>
-                        <h6>Sat-Sun: 6:00am to 9:00pm</h6>
-                    </div>
-                    <div class="box2">
-                        <img src="images/cakepng/slice cake 2.png" alt="">
-                    </div>
-
+    <section class="contactus">
+        <div class="container">
+            <div class="boxes b1">
+                <h2>Contact With us</h2>
+                <div class="timing">
+                    <h4>Representatives or Advisors are available:</h4>
+                    <h4>Mon-Fri: 5:00am to 9:00pm</h4>
+                    <h4>Sat-Sun: 6:00am to 9:00pm</h4>
                 </div>
-
-
-                <div class="contact">
-
-                    <form action="">
-                        <!-- <div class="search search1">Contact Us</div> -->
-                        <div class="search search2">
-                            <div class="i1">
-                                <label for="name">FULL NAME</label>
-                                <input type="text" id="name" placeholder="Name">
-                            </div>
-                            <div class="i1">
-                                <label for="mail">EMAIL ADDRESS</label>
-                                <input type="email" id="mail" placeholder="email">
-                            </div>
-                        </div>
-                        <div class="search">
-                            <label for="sub">SUBJECT</label>
-                            <input type="text" id="sub" placeholder="subject">
-                        </div>
-                        <div class="search">
-                            <label for="sub">MESSAGE</label>
-                            <textarea placeholder="MESSAGE"></textarea>
-                        </div>
-                        <div class="search">
-                            <button type="submit">send message</button>
-                        </div>
-                    </form>
+                <div class="img">
+                    <img src="images/gallery/cake-piece.png" alt="">
                 </div>
-
-
-
             </div>
-            <div class="ourdetail"></div>
-
+            <div class="boxes b2">
+                <div class="inputs1">
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="mail">
+                </div>
+                <div class="inputs">
+                    <input type="text" placeholder="message" class="message">
+                </div>
+                <div class="inputs">
+                    <button type="submit">SEND US</button>
+                </div>
+            </div>
         </div>
     </section>
 
-    <footer>
+
+   
+
+   <footer>
 
         <div class="footermain">
 
@@ -237,7 +206,21 @@
                 </div>
 
 
+               
+
+
             </div>
+             <div class="end">
+                    <div class="l">
+                        Copyright ©2025 All rights reserved | This template is made with 🧡 by <span>Colorlib</span> 
+                    </div>
+
+                    <div class="r">
+                        <div class="b">Privacy Policy</div>
+                        <div class="b"> Terms & Conditions</div>
+                        <div class="b b3"> Site Map</div>
+                    </div>
+                </div>
 
 
         </div>
