--- a/cart.html
+++ b/cart.html
@@ -27,11 +27,11 @@
         <input type="checkbox" id="bar" class="checkbox">
         <nav>
             <ul>
-                <li><a href="index.html" class="a1">HOME</a></li>
-                <li><a href="about.html" class="a2">ABOUT</a></li>
-                <li><a href="shop.html" class="a3">ORDER ONLINE</a></li>
-                <li><a href="category.html" class="a4">CATEGORY</a></li>
-                <li><a href="contact.html" class="a5">CONTACT</a></li>
+                <li><a href="index.html" class="a1">Home</a></li>
+                <li><a href="about.html" class="a2">About</a></li>
+                <li><a href="shop.html" class="a3">Shop</a></li>
+                <li><a href="blog.html" class="a4">Blog</a></li>
+                <li><a href="contact.html" class="a5">Contact</a></li>
             </ul>
         </nav>
         <div class="cart">
@@ -203,9 +203,9 @@
     </section>
 
 
-    <footer >
+   <footer>
 
-        <div class="footermain cfoot">
+        <div class="footermain">
 
             <div class="footer">
 
@@ -250,7 +250,21 @@
                 </div>
 
 
+               
+
+
             </div>
+             <div class="end">
+                    <div class="l">
+                        Copyright ©2025 All rights reserved | This template is made with 🧡 by <span>Colorlib</span> 
+                    </div>
+
+                    <div class="r">
+                        <div class="b">Privacy Policy</div>
+                        <div class="b"> Terms & Conditions</div>
+                        <div class="b b3"> Site Map</div>
+                    </div>
+                </div>
 
 
         </div>
