--- a/cart.html
+++ b/cart.html
@@ -27,9 +27,17 @@
         <input type="checkbox" id="bar" class="checkbox">
         <nav>
             <ul>
-                <li><a href="index.html" class="a1">Home</a></li>
+                <li><a href="home.html" class="a1">Home</a></li>
                 <li><a href="about.html" class="a2">About</a></li>
                 <li><a href="shop.html" class="a3">Shop</a></li>
+                <li class="pa">
+                        <a class="a3">Pages</a>
+                        <ul class="pages">
+                            <li><a href="checkout.html">checkout</a></li>
+                            <li><a href="cart.html">Shoping Cart</a></li>
+                           
+                        </ul>
+                    </li>
                 <li><a href="blog.html" class="a4">Blog</a></li>
                 <li><a href="contact.html" class="a5">Contact</a></li>
             </ul>
@@ -41,6 +49,10 @@
                 <a href="cart.html"> <i class="fa-brands fa-opencart"></i></a>
                 <div class="counting">1</div>
             </div>
+             <div class="tr tr4">
+                    <a href="index.html"> <i class="fa-solid fa-right-from-bracket"></i></a>
+                   
+                </div>
 
 
 
