--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,17 @@
         <input type="checkbox" id="bar" class="checkbox">
         <nav>
             <ul>
-                <li><a href="index.html" class="a1">Home</a></li>
+                <li><a href="home.html" class="a1">Home</a></li>
                 <li><a href="about.html" class="a2">About</a></li>
                 <li><a href="shop.html" class="a3">Shop</a></li>
+                <!-- <li class="pa">
+                    <a class="a3">Pages</a>
+                    <ul class="pages">
+                        <li><a href="checkout.html">checkout</a></li>
+                        <li><a href="cart.html">Shoping Cart</a></li>
+
+                    </ul>
+                </li> -->
                 <li><a href="blog.html" class="a4">Blog</a></li>
                 <li><a href="contact.html" class="a5">Contact</a></li>
             </ul>
@@ -39,6 +47,10 @@
             <div class="tr tr3">
                 <i class="fa-brands fa-opencart"></i>
                 <div class="counting">1</div>
+            </div>
+            <div class="tr tr4">
+                <a href="index.html"> <i class="fa-solid fa-right-from-bracket"></i></a>
+
             </div>
 
 
@@ -157,9 +169,9 @@
     </section>
 
 
-   
 
-   <footer>
+
+    <footer>
 
         <div class="footermain">
 
@@ -206,21 +218,21 @@
                 </div>
 
 
-               
+
 
 
             </div>
-             <div class="end">
-                    <div class="l">
-                        Copyright ©2025 All rights reserved | This template is made with 🧡 by <span>Colorlib</span> 
-                    </div>
-
-                    <div class="r">
-                        <div class="b">Privacy Policy</div>
-                        <div class="b"> Terms & Conditions</div>
-                        <div class="b b3"> Site Map</div>
-                    </div>
+            <div class="end">
+                <div class="l">
+                    Copyright ©2025 All rights reserved | This template is made with 🧡 by <span>Colorlib</span>
                 </div>
+
+                <div class="r">
+                    <div class="b">Privacy Policy</div>
+                    <div class="b"> Terms & Conditions</div>
+                    <div class="b b3"> Site Map</div>
+                </div>
+            </div>
 
 
         </div>
@@ -329,8 +341,10 @@
                         <span class="ttotal">2000</span>
                     </div>
                     Taxes and shipping are calculated at checkout.
-                    <button type="submit"><a href="">Checked Out</a></button>
-                    <button type="submit"><a href="cart.html">View Cart</a></button>
+                    <a href="checkout.html"> <button type="submit">Checked Out</button></a>
+                    <a href="cart.html"><button type="submit">View Cart</button></a>
+
+
                     <h2><i class="fa-solid fa-lock"></i> Secure Checkout</h2>
                 </footer>
             </div>
