--- a/shop.html
+++ b/shop.html
@@ -26,9 +26,17 @@
         <input type="checkbox" id="bar" class="checkbox">
         <nav>
             <ul>
-                <li><a href="index.html" class="a1">Home</a></li>
+                <li><a href="home.html" class="a1">Home</a></li>
                 <li><a href="about.html" class="a2">About</a></li>
                 <li><a href="shop.html" class="a3">Shop</a></li>
+                <!-- <li class="pa">
+                    <a class="a3">Pages</a>
+                    <ul class="pages">
+                        <li><a href="checkout.html">checkout</a></li>
+                        <li><a href="cart.html">Shoping Cart</a></li>
+
+                    </ul>
+                </li> -->
                 <li><a href="blog.html" class="a4">Blog</a></li>
                 <li><a href="contact.html" class="a5">Contact</a></li>
             </ul>
@@ -39,6 +47,10 @@
             <div class="tr tr3">
                 <i class="fa-brands fa-opencart"></i>
                 <div class="counting">1</div>
+            </div>
+            <div class="tr tr4">
+                <a href="index.html"> <i class="fa-solid fa-right-from-bracket"></i></a>
+
             </div>
 
 
@@ -92,8 +104,9 @@
     </div>
 
 
-   <section class="section3" id="section3">
+    <section class="section3" id="section3">
         <div class="  container3">
+            <h1><span>C</span>up<span>C</span>ake</h1>
 
             <div class="second">
                 <div class="types">
@@ -292,6 +305,148 @@
             </div>
         </div>
 
+        <div class="  container3">
+            <h1><span>R</span>ed <span>V</span>elvet</h1>
+
+            <div class="second">
+                <div class="types">
+                    <div class="pic pic1">
+                        <img src="images/red velvet/classic.jpg" alt="">
+
+                    </div>
+                    <div class="name">
+                        <div class="flavour">cupcake</div>
+                        <h2>Dozen Cupcakes</h2>
+                        <h3>$75</h3>
+
+                        <div class="add">
+                            Add to Cart
+                        </div>
+                    </div>
+                </div>
+
+                <div class="types">
+                    <div class="pic pic2">
+                        <img src="images/red velvet/cheese.jpg" alt="">
+
+                    </div>
+                    <div class="name">
+                        <div class="flavour">cupcake</div>
+                        <h2>Cookies and Cream</h2>
+                        <h3>$69</h3>
+
+                        <div class="add">
+                            Add to Cart
+                        </div>
+                    </div>
+                </div>
+
+                <div class="types">
+                    <div class="pic pic3">
+                        <img src="images/red velvet/cocolate redvelvet.jpg" alt="">
+
+                    </div>
+                    <div class="name">
+                        <div class="flavour">cupcake</div>
+                        <h2>Gluten Free Mini Dozen</h2>
+                        <h3>$110</h3>
+
+                        <div class="add">
+                            Add to Cart
+                        </div>
+                    </div>
+                </div>
+
+                <div class="types">
+                    <div class="pic pic4">
+                        <img src="images/red velvet/eggless.jpg" alt="">
+
+                    </div>
+                    <div class="name">
+                        <div class="flavour">cupcake</div>
+                        <h2>Cookie Dough</h2>
+                        <h3>$99</h3>
+
+                        <div class="add">
+                            Add to Cart
+                        </div>
+                    </div>
+                </div>
+
+                <div class="types">
+                    <div class="pic pic5">
+                        <img src="images/red velvet/heart-shaped-red-velvet-cake-dark.jpg" alt="">
+
+                    </div>
+                    <div class="name">
+                        <div class="flavour">cupcake</div>
+                        <h2>Vanilla Salted Caramel</h2>
+                        <h3>$69</h3>
+
+                        <div class="add">
+                            Add to Cart
+                        </div>
+                    </div>
+                </div>
+
+                <div class="types">
+                    <div class="pic pic6">
+                        <img src="images/red velvet/roll.jpg" alt="">
+
+                    </div>
+                    <div class="name">
+                        <div class="flavour">cupcake</div>
+                        <h2>German Chocolate</h2>
+                        <h3>$169</h3>
+
+                        <div class="add">
+                            Add to Cart
+                        </div>
+                    </div>
+                </div>
+
+                <div class="types">
+                    <div class="pic pic7">
+                        <img src="images/red velvet/still-life-with-cup-brazilian-acai-dessert.jpg" alt="">
+
+                    </div>
+                    <div class="name">
+                        <div class="flavour">cupcake</div>
+                        <h2>Dulce De Leche</h2>
+                        <h3>$102</h3>
+
+                        <div class="add">
+                            Add to Cart
+                        </div>
+                    </div>
+                </div>
+
+                <div class="types">
+                    <div class="pic pic8">
+                        <img src="images/red velvet/red-velvet-cake-heart-shape-garnished-with-raspberries-mint-leaves.jpg"
+                            alt="">
+
+                    </div>
+                    <div class="name">
+                        <div class="flavour">cupcake</div>
+                        <h2>Mississippi Mud</h2>
+                        <h3>$99</h3>
+
+                        <div class="add">
+                            Add to Cart
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+            </div>
+        </div>
+
         </div>
     </section>
 
@@ -356,21 +511,21 @@
                 </div>
 
 
-               
+
 
 
             </div>
-             <div class="end">
-                    <div class="l">
-                        Copyright ©2025 All rights reserved | This template is made with 🧡 by <span>Colorlib</span> 
-                    </div>
-
-                    <div class="r">
-                        <div class="b">Privacy Policy</div>
-                        <div class="b"> Terms & Conditions</div>
-                        <div class="b b3"> Site Map</div>
-                    </div>
+            <div class="end">
+                <div class="l">
+                    Copyright ©2025 All rights reserved | This template is made with 🧡 by <span>Colorlib</span>
                 </div>
+
+                <div class="r">
+                    <div class="b">Privacy Policy</div>
+                    <div class="b"> Terms & Conditions</div>
+                    <div class="b b3"> Site Map</div>
+                </div>
+            </div>
 
 
         </div>
@@ -479,8 +634,10 @@
                         <span class="ttotal">2000</span>
                     </div>
                     Taxes and shipping are calculated at checkout.
-                    <button type="submit"><a href="">Checked Out</a></button>
-                    <button type="submit"><a href="cart.html">View Cart</a></button>
+                    <a href="checkout.html"> <button type="submit">Checked Out</button></a>
+                    <a href="cart.html"><button type="submit">View Cart</button></a>
+
+                    
                     <h2><i class="fa-solid fa-lock"></i> Secure Checkout</h2>
                 </footer>
             </div>
