--- a/contact.html
+++ b/contact.html
@@ -77,9 +77,10 @@
                     <h4> 1000 Lakepoint Dr, Frisco, CO 80443, USA</h4>
                     <h4> Sweetcake@support.com</h4>
                     <h4> +1 800-786-1000</h4>
+                </div>
 
-
-
+                <div class="expand">
+                    <i class="fa-solid fa-angle-down"></i>
                 </div>
             </div>
         </div>
