--- a/about.html
+++ b/about.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>Cream Craft-online cake ordering system</title>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/about.css">
     <link rel="stylesheet" href="style/style2.css">
+    <link rel="shortcut icon" href="images/logo/black theme.jpg"  type="image/x-icon">
 
 
 </head>
