--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>Cream Craft-online cake ordering system</title>
+    <link rel="shortcut icon" href="images/logo/black theme.jpg"  type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/contact.css">
     <link rel="stylesheet" href="style/style2.css">
@@ -71,7 +72,7 @@
 
 
                 <div class="scroller scroller1">
-                    <h2>Gujiliyamparai</h2>
+                    <h2>Los angeles</h2>
                 </div>
                 <div class="scroller scroller2">
                     <h4> 1000 Lakepoint Dr, Frisco, CO 80443, USA</h4>
