--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>Cream Craft-online cake ordering system</title>
    <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
@@ -16,6 +16,8 @@
 
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/style2.css">
+    
+    <link rel="shortcut icon" href="images/logo/black theme.jpg"  type="image/x-icon">
 </head>
 
 <body>
@@ -526,8 +528,8 @@
                     <img src="images/team/team-2.jpg" alt="">
                     <div class="info">
                         <div class="det">
-                            <h3>Randy Butler</h3>
-                            <p>Decorater</p>
+                            <h3>Sophia Miller</h3>
+                            <p>Cake Designer</p>
                             <div class="socialmedia">
                                 <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                                 <a href=""><i class="fa-brands fa-instagram"></i></a>
@@ -541,8 +543,8 @@
                     <img src="images/team/team-3.jpg" alt="">
                     <div class="info">
                         <div class="det">
-                            <h3>Randy Butler</h3>
-                            <p>Decorater</p>
+                            <h3>Daniel Carter</h3>
+                            <p>Head Baker</p>
                             <div class="socialmedia">
                                 <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                                 <a href=""><i class="fa-brands fa-instagram"></i></a>
@@ -556,8 +558,8 @@
                     <img src="images/team/team-4.jpg" alt="">
                     <div class="info">
                         <div class="det">
-                            <h3>Randy Butler</h3>
-                            <p>Decorater</p>
+                            <h3>Michael Brown</h3>
+                            <p>Customer Relations Executive</p>
                             <div class="socialmedia">
                                 <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                                 <a href=""><i class="fa-brands fa-instagram"></i></a>
@@ -578,8 +580,8 @@
             <div class="two reg">
                 <h3>Class cakes</h3>
                 <h1>Made from your own hands</h1>
-                <input type="text" placeholder="NAME">
-                <input type="number" placeholder="NUMBER">
+                <input type="text" placeholder="Name">
+                <input type="text" placeholder="Enter your Number">
                 <input type="email" placeholder="email">
                 <input type="text" placeholder="Type your Reqirements">
                 <button type="submit">Registration</button>
