--- a/checkout.html
+++ b/checkout.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>Cream Craft-online cake ordering system</title>
+    <link rel="shortcut icon" href="images/logo/black theme.jpg"  type="image/x-icon">
     <link rel="stylesheet" href="style/checkout.css">
     <link rel="stylesheet" href="style/style.css">
 
