--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Document</title>
+    <title>Cream Craft-online cake ordering system</title>
+    <link rel="shortcut icon" href="images/logo/black theme.jpg"  type="image/x-icon">
     <link rel="stylesheet" href="style/index.css">
+   
     
 </head>
 
